update startserver.sh